class PdfPlacement(string name, string url, string alt_url)
{
    public string Name { get; set; } = name;
    public string Url { get; set; } = url;
    public string Alt_url { get; set; } = alt_url;
}